--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batman T4SU</title>
-    <style>
-        img{ background-color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="./ASSETS/CSS/Style.css">
     </head>
     <body>
     <header>
@@ -30,8 +27,7 @@
             <h2>Il est Batman.</h2>
         </div>
         <div>
-            <a href="">VOIR LE HEROS</a>
-                <br>
+            <a href="">VOIR LE HEROS</a><br>
             <a href="">LES ADVERSAIRES</a>
         </div>
         <img src="ASSETS/Camera Roll/flèche_down_header.png" alt="flèche_down_header">
@@ -42,16 +38,200 @@
                 comic book Detective Comics en 1939. Batman se différencie de Superman, alors héros
                 majeur de DC, car il n’a aucun pouvoir. Il sera porté au cinema pour la première fois en 1943
                 par Lewis Wilson et bénéficiera de nombreux reboot, donnant l’occasion à de multiples
-                acteurs d’interpréter l’homme chauve-souris. Voici les trois derniers :S</P>
+                acteurs d’interpréter l’homme chauve-souris. Voici les trois derniers :</P>
  </div>
  <div>
 <img src="./assets/ILLUSTRATION/Bathome2.png" alt="Bathome2">
- </div>
+ <div>
  <h3>Robert Pattinson</h3>
  <p>(2022)</p>
+ </div>
+ <div>
+    <img src="./assets/ILLUSTRATION/Bathome3.png" alt="Bathome3">
+     <div>
+     <h3>Christian Bale</h3>
+     <p>(2006 - 2008 - 2012)</p>
+     </div>
+     <div>
+        <img src="./assets/ILLUSTRATION/Bathome4.png" alt="Bathome4">
+         <div>
+         <h3>Ben Affleck</h3>
+         <p>20016- 2017/2020 – 2023</p>
+         </div>
 </section>
+<section>
+    <div>
+    <h1>NÉMÉSIS</h1>
+    <P>- Batman souhaite éradiquer la criminalité de Gotham. C’est pourquoi, il affrontera la plupart
+        du temps, des vilains sans capacités surnaturelles mais particulièrement violents ou
+        psychopathes. Avec son introduction dans la Justice League il aura l’occasion de se mesurer à
+        des antagonistes qui défient l’imagination et les lois de la physique. Parmi les derniers
+        ennemis emblématiques que nous avons pu voir au cinéma, on retrouve :
+        </P>
+</div>
+<div>
+<img src="./assets/ILLUSTRATION/Bathome5.png" alt="Bathome5">
+<div>
+<h3>The Riddler - Paul Dano</h3>
+<p>(2022)</p>
+</div>
+<div>
+<img src="./assets/ILLUSTRATION/Bathome6.png" alt="Bathome6">
+<div>
+<h3>Le Joker - Heath Ledger</h3>
+<p>2008</p>
+</div>
+<div>
+<img src="./assets/ILLUSTRATION/Bathome7.png" alt="Bathome7">
+ <div>
+ <h3>Darkseid - Ray Porter</h3>
+ <p>(2022)</p>
+ </div>
+</section>
+<section>
+    <div>
+        <h1>NÉMÉSIS</h1>
+        <P>- Alfred est le majordome des Wayne. A leur mort il s’occupe de l’éducation du jeune Bruce
+            avant de l’assister dans son rôle du Batman. Ce dernier rencontrera Catwoman dès le
+            premier numéro des aventures de l’homme chauve-souris en 1940. Tantôt ennemie tantôt
+            alliée la jeune femme fatale fera tourner la tête de Batman à maintes reprises. Du côté de la
+            police, Bruce pourra compter sur l’aide infaillible de James Gordon, “Jim”, qui désire lui aussi
+            nettoyer sa ville de la criminalité qui y règne.
+            </P>
+    </div>
+    <div>
+    <img src="./assets/ILLUSTRATION/Bathome9.png" alt="Bathome9">
+    <div>
+    <h3>Alfred Pennyworth - Michael Cain</h3>
+    <p>(2006 - 2008 - 2012)</p>
+    </div>
+    <div>
+    <img src="./assets/ILLUSTRATION/Bathome8.png" alt="Bathome8">
+    <div>
+    <h3>
+        Catwoman - Zoé Kravitz
+    </h3>
+    <p>(2008)</p>
+    </div>
+    <div>
+        <img src="./assets/ILLUSTRATION/Bathome10.png" alt="Bathome10">
+        <div>     
+    <div>
+     <h3>James Gordon</h3>
+     <p>(2014-2019)</p>
+     </div>
+</section>
+<section>
+    <div>
+        <h1>JUSTICE LEAGUE</h1>
+        <P>Lorsque la Terre est menacée les plus grands super-héros s’allient pour la protéger. Ils
+            doivent cependant apprendre à se faire confiance mutuellement et à faire équipe ce qui ne
+            sera pas chose aisée. Ensemble ils forment la Justice League, les plus grands super-héros de
+            la Terre, ceux vers qui le monde entier se tourne lorsque les menaces extraterrestres ou
+            surnaturelles menacent son existence.
+            </P>
+    </div>
+    <div>
+    <img src="./assets/ILLUSTRATION/Bathome11.png" alt="Bathome11">
+    <div>
+        <section>
+            <div>
+                <h1>MULTIMÉDIA
+                </h1> 
+                <div>
+                    <img src="./assets/ILLUSTRATION/Bathome_ba1.png" alt="Bathome_ba1">
+                </div>
+            </div>
+            <h2>ACTION, ADVENTURE</h2>
+            <h3>Batman begins</h3>
+            <p>
+                IMDB:<SPan>8.2</SPan>
+            </p>
+            <P>Le jeune Bruce Wayne assiste impuissant au meurtre de ses parents. Profondément
+                traumatisé, il grandit obnubilé par un désir de vengeance. La Ligue des ombres, une secte de
+                guerriers ninja dirigée par Ra's al Ghul, se chargera de son entraînement. De retour chez lui à
+                Gotham, avec l'aide de son majordome Alfred Pennyworth, Bruce Wayne se lance alors dans
+                la lutte contre le crime sous le nom de Batman.</P>
+                <div>
+                    <div>
+                        <img src="./assets/ILLUSTRATION/Bathome_ba2.png" alt="Bathome_ba2">    
+                    </div>
+                </div>
+        </section>
+        <section>
+            <div>
+                <h2>
+                    PRENONS CONTACT   
+                </h2>
+                <form action="">
+                  <label for="email">ADRESSE EMAIL</label>
+                  <input type="email" name="email" placeholder="Adresse email">
+                </form>
+                <div>
+                    <form action="">
+                      <label for="newsletter">NEWSLETTER</label><br>
+                      <label for="">En cochant cette case vous acceptez de recevoir l’actualité concernant les aventures de
+                        Batman :</label><br>
+                        <input type="checkbox"><br>
+                        <div>
+                            <span>Choisissez la fréquence à laquelle vous souhaitez recevoir votre newsletter</span>
+                            <span>
+                    <img src="./ASSETS/Camera Roll/icon_flèche_2.png" alt="icon_flèche_2">
+                            </span>
+                        </div>
+                        <div>
+                            <p>
+                                Souhaitez-vous recevoir des news
+                            </p>
+                        </div>
+                        <a href="">Des films</a>
+                        <a href="">Des comics</a>
+                        <a href="">De tout</a>
+                        <p>
+                            MESSAGE
+                        </p>
+                        <textarea name="" id="" cols="30"placeholder="Laissez un commentaire pour la communauté"></textarea>
+                        <input type="submit" value="CONFIRMER">
+                    </form>
+            </div>
+        </section>
+        <section>
+<div>
+    <div>
+        <img src="./ASSETS/Camera Roll/icon_guillemets_1.png" alt="icon_guillemets_1">
+    </div>
+    <div>
+        <div>
+            <p>
+                « La seule façon raisonnable de vivre en ce bas monde, c'est en dehors des règles. »
+            </p>
+        </div>
+    </div>
+    The Dark Knight : Le Chevalier Noir - Le Joker à Batman (2008)
+</div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <div>
+                <img src="./ASSETS/Camera Roll/icon_WB.png" alt="icon_WB">
+                <p>
+                    Ce projet respecte l’univers cinématographique des films Batman récents. Version Nolan &
+Snyder & Reeves
+                </p>
+            </div>
+            <div>
+                <a href="#">
+                   <a href=""><img src="./ASSETS/Camera Roll/logo_sayna_white.png" alt="logo_sayna_white></a>
+                    <a href=""><img src="./ASSETS/Camera Roll/icon_x.png" alt="icon_x"></a>
+                    <a href=""><img src="./ASSETS/Camera Roll/icon_DC.png" alt="icon_DC"></a>
+                    <a href=""><img src="./ASSETS/Camera Roll/icon_facebook.png" alt="icon_facebook"></a>
+                    <a href=""><img src="./ASSETS/Camera Roll/icon_ig.png" alt="icon_ig"></a>
+                    <a href=""><img src="./ASSETS/Camera Roll/icon_tw.png" alt="icon_tw"></a>
+                </a>
+            </div>
+        </div>
+    </footer>
     </body>
     </title>
 </head>
